--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "silverstripe/framework": "^4",
-        "rosell-dk/webp-convert": "^2.6.0"
+        "rosell-dk/webp-convert": "^2.6.0",
+        "ext-fileinfo": "*"
     },
     "autoload": {
         "psr-4": {
