--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
         "webp"
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "silverstripe/framework": "^4",
-        "rosell-dk/webp-convert": "^2.6.0",
+        "php": "^8.1",
+        "silverstripe/framework": "^5.0",
+        "rosell-dk/webp-convert": "^2.9.2",
         "ext-fileinfo": "*"
     },
     "autoload": {
